Thu Jul 29 16:31:20 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in libgamin/gam_api.c server/gam_channel.c
	  server/gam_channel.h server/gam_connection.c server/gam_server.c
	  server/gam_server.h: reactivated support for OSes without 
	  abstract sockets using a /tmp subdir per user to avoid problems
	* doc/socket.txt: small text describing the socket handling
	* doc/gamin-api.xml: rebuilt

Wed Jul 28 22:29:57 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in libgamin/gam_api.c server/gam_channel.c: desactivating
	  code if abstract sockets are not found following security problem
	  http://mail.gnome.org/archives/gamin-list/2004-July/msg00017.html

Tue Jul 27 12:23:52 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in server/Makefile.am server/gam_inotify.c
	  server/gam_inotify.h server/gam_server.c: Applied patches
	  from John McCutchan for inotify the potential dnotify
	  kernel API replacement on Linux.

Tue Jul 27 11:52:58 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/fam.h: fix a compilation problem with latest patch.
	* libgamin/gam_api.c server/gam_connection.c server/gam_listener.c
	  server/gam_listener.h: applied patch from Carlos Romero to fix
	  FAMCancelMonitor.

Sat Jul 17 19:40:25 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* doc/apibuild.py doc/gamin-api.xml doc/gamin-refs.xml: some
	  doc extraction processing based on libxml2 tool
	* libgamin/fam.h libgamin/gam_api.c libgamin/gam_data.c
	  libgamin/gam_error.h libgamin/gam_protocol.h: cleanup in the
	  process of generating the XML description.

Fri Jul 16 13:42:37 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in configure.in: preparing 0.0.2 release
	* libgamin/gam_api.c libgamin/gam_data.c libgamin/gam_data.h:
	  made the client side restartable, i.e. if the server exists
	  a new connection is made and monitors are reestablished
	  seems to work more or less okay.
	* TODO: updated.
